# a2a_protocol

./: .gitignore  LISCENCE  README.md
a2a_google_adk/: main.py  pyproject.toml
a2a_google_adk/agents/google_adk/: __main__.py  agent.py  task_manager.py
a2a_google_adk/app/cmd/: cmd.py
a2a_google_adk/client/: client.py
a2a_google_adk/server/: server.py  task_manager.py
a2a_multiagent/: README.md  main.py  pdf_metadata.json  pyproject.toml  trayectoria.json
a2a_multiagent/agents/asistente_fisica/: __main__.py  agent.py  task_manager.py
a2a_multiagent/agents/greeting_agent/: __main__.py  agent.py  task_manager.py
a2a_multiagent/agents/host_agent/: agent_connect.py  entry.py  orchestrator.py
a2a_multiagent/agents/image_generation/: __main__.py  agent.py  task_manager.py
a2a_multiagent/agents/image_generator/: __main__.py  agent.py  task_manager.py
a2a_multiagent/agents/tell_datetimetz_agent/: __main__.py  agent.py  task_manager.py
a2a_multiagent/app/cmd/: cmd.py  cmdOLD.py
a2a_multiagent/client/: client.py
a2a_multiagent/models/: agent.py  json_rpc.py  request.py  task.py
a2a_multiagent/server/: server.py
a2a_multiagent/utilities/: discovery.py
basics/: .gitignore  README.md
basics/client/: datetime_timezone_client.py  pyproject.toml
basics/server/: pyproject.toml  tell_datetime_timezone_server.py
