[project]
name = "a2a-google-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncclick>=8.1.8",
    "click>=8.2.1",
    "google-adk>=1.2.1",
    "google-genai>=1.19.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
]
