[project]
name = "a2a-multiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adk>=0.0.5",
    "ag2[gemini]>=0.9.6",
    "asyncclick>=8.1.8",
    "autogen>=0.9.6",
    "click>=8.2.1",
    "crewai>=0.165.1",
    "fastapi>=0.115.12",
    "google-adk>=1.2.1",
    "google-genai>=1.19.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.7",
    "pydantic>=2.11.5",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.3",
    "starlette>=0.46.2",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "tzlocal>=5.3.1",
    "uvicorn>=0.34.3",
]
